@@ -1,0 +1,77 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 TRANSITIONAL//EN" "HTTP://WWW.W3.ORG/TR/HTML4/LOOSE.DTD">
+<HTML> <HEAD>
+<TITLE>Ocaml minor garbage collector: Syntax tree</TITLE>
+</HEAD>
+
+<BODY>
+<div style="background:#ffa500; color:#0048ff; text-align:center">
+<H1>Ocaml minor garbage collector: Syntax tree</H1>
+</div>
+
+
+<TABLE width="100%" border="0">
+<TR valign="top"><TD>
+I applied the ast_graph tool to the file
+<KBD>byterun/minor_gc.c</KBD> in the Ocaml 3.09.2 distribution.
+With just below 11.000 nodes and 11.000 edges its syntax tree is
+not really bit. However, it still big enough to get most viewer
+software into trouble. On the right hand side you see a small
+part of it (about 5%) reduced to a 2000x1300 pixels.
+<P>
+
+You can download the following versions:
+<BLOCKQUOTE><TABLE>
+<TR><TD>
+<A HREF="minor_gc-detail.png.gz" >[minor_gc-detail.png.gz]</A>
+</TD><TD>
+detail (as on the right hand side) as 30150 x 19538 png
+</TD><TR><TD>
+<A HREF="minor_gc.ps.gz" >[minor_gc.ps.gz]</A>
+</TD><TD>
+complete tree, postscript
+</TD><TR><TD>
+<A HREF="minor_gc-pages.ps.gz" >[minor_gc-pages.ps.gz]</A>
+</TD><TD>
+complete tree, postscript, paginated
+</TD><TR><TD>
+<A HREF="minor_gc.fig.gz" >[minor_gc.fig.gz]</A>
+</TD><TD>
+complete tree, xfig
+</TD><TR><TD>
+<A HREF="minor_gc.dot" >[minor_gc.dot.gz]</A>
+</TD><TD>
+complete tree, dot
+</TD><TR>
+</TABLE>
+</BLOCKQUOTE>
+<P>
+
+Please let me know, if you can disply the whole graph in a better
+way than with gv or xfig (especially with more convenient
+scrolling and magnification).
+
+</TD>
+<TD width="30%">
+<IMG SRC="minor_gc-detail-small-border.png"  alt="syntax tree of ocaml's
+  minor garbage collector" width="100%">
+</TD>
+</TR>
+</TABLE>
+
+
+
+
+<HR><FONT SIZE="-2">
+last changed on
+<!-- hhmts start --> 7 Sep 2006
+<!-- hhmts end -->
+by <A HREF="/~tews">Hendrik</A>
+</FONT></BODY> </HTML>
+
+
+<!-- LOCAL VARIABLES: -->
+<!-- MODE: HTML-HELPER -->
+<!-- VERSION-CONTROL: T -->
+<!-- KEPT-NEW-VERSIONS: 5 -->
+<!-- DELETE-OLD-VERSIONS: T -->
+<!-- END: -->
