@@ -1,3 +1,7 @@
+2006-09-07  Hendrik Tews  <tews@debian>
+
+	* minor_gc.html
+
 2006-09-05  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
 	* finshed index.html
